--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.4.3",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/motion": "^1.0.5",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "autoprefixer": "^10.4.4",
+    "movement-camera": "../movement-camera",
+    "postcss": "^8.4.12",
     "rxjs": "~6.6.0",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
