--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "io.ionic.starter",
 	"appName": "train-american",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.4.114:8101"
+	}
 }
