--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -3,7 +3,7 @@
 	"appName": "train-american",
 	"webDir": "www",
 	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.4.114:8101"
+	"ios": {
+		"hideLogs": false
 	}
 }
