--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "^3.4.3",
     "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "3.4.3",
+    "@capacitor/ios": "3.5.0",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/motion": "^1.0.5",
     "@capacitor/status-bar": "1.0.8",
