--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -13,7 +13,7 @@ def capacitor_pods
   pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
-  pod 'MovementCamera', :path => '../../../movement-camera'
+  pod 'MovementCamera', :path => '../../node_modules/movement-camera'
 end
 
 target 'App' do
