--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/motion": "^1.0.5",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "angular-circle-counter": "^1.1.0",
     "autoprefixer": "^10.4.4",
     "movement-camera": "../movement-camera",
     "postcss": "^8.4.12",
